--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Change me or fail...</title>
+<title>Web Development hw1</title>
 <link href="css/main.css" rel="stylesheet" type="text/css" media="screen">
 </head>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@1,300&family=Roboto+Condensed:wght@300&display=swap" rel="stylesheet">
 <body>
     <h1 class="hidden"></h1>
     <div id="container">
         <main id="mainContent">
             <article>
-                <!-- Content goes here -->
+                <h1>Lorem ipsum dolor sit amet</h1>
+                <img src="images/letters.jpg" alt="main-image" id="letters">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate perspiciatis, quidem ipsam iusto aliquid laboriosam alias dicta iure dolorem totam saepe quae aspernatur, pariatur culpa nobis odio delectus, dolor facilis.</p>
+                <br>
+                <h2>Lorem ipsum dolor.</h2>
             </article>    
         </main>
     </div>
